--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background-color: $dark-blue;
+   // background-color: $dark-blue;
     font-family: Helvetica, Arial, sans-serif;
     font-size: $m-size; //now 16px due to conversion above
 }
@@ -14,6 +14,10 @@ button {
     &:disabled {
         cursor: default;
     }
+}
+
+.is-active {
+    font-weight: bold;
 }
 
 
