--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-   // background-color: $dark-blue;
+    
     font-family: Helvetica, Arial, sans-serif;
     font-size: $m-size; //now 16px due to conversion above
 }
@@ -18,6 +18,10 @@ button {
 
 .is-active {
     font-weight: bold;
+}
+
+.DateInput {
+    position: static !important;//cuz arrow was hidden due to default position:relative
 }
 
 
