--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,11 +1,16 @@
+*{
+    box-sizing: border-box;
+}
+
 html {
     font-size: 62.5%;  //1rem=16px, 16px*.625 = 10px
 }
 
 body {
-    
+    color: $dark-grey;
     font-family: Helvetica, Arial, sans-serif;
     font-size: $m-size; //now 16px due to conversion above
+    line-height: 1.6;
 }
 
 button {
@@ -23,5 +28,7 @@ button {
 .DateInput {
     position: static !important;//cuz arrow was hidden due to default position:relative
 }
+
+
 
 
